# tauri-plugin-unarchiver

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  renovate.json  rollup.config.mjs  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
guest-js/: index.ts
src/: lib.rs
